test/sh/error/misc/invalid_block_in_assign.sk
mut x := 0

x = 1 {
	# invalid
}
